--- a/helm/charts/determined/templates/db-volume-snapshot-class.yaml
+++ b/helm/charts/determined/templates/db-volume-snapshot-class.yaml
@@ -1,6 +1,9 @@
+{{- if and .Release.IsUpgrade .Values.db.snapshotSuffix }}
 apiVersion: snapshot.storage.k8s.io/v1
 kind: VolumeSnapshotClass
 metadata:
   name: determined-db-snapshot-class
 driver: pd.csi.storage.gke.io
 deletionPolicy: Retain
+{{ end }}
+
