--- a/.circleci/real_config.yml
+++ b/.circleci/real_config.yml
@@ -2750,6 +2750,9 @@ jobs:
       container-run-type:
         type: string
         default: singularity
+      allocate-gpu:
+        type: bool
+        default: false
       workload-manager:
         type: string
         default: slurm
@@ -2856,7 +2859,7 @@ jobs:
             sudo apt-get install gettext
             sudo apt-get install iproute2
             if [ <<parameters.container-run-type>> = "enroot" ]; then
-              gpu_param="-g nvidia-tesla-t4:1"
+              gpu_param="-g nvidia-tesla-t4:2"
             fi
             yes yes | PATH=$HOME/.local/bin:$PATH make slurmcluster \
               FLAGS="${gpu_param} -c <<parameters.container-run-type>> -w <<parameters.workload-manager>> -l '{owner=\\\"determined_ci\\\", gh_team=\\\"machine-users\\\"}'" \
